sh_binary(
  name = "create_postgres",
  srcs = ["create_postgres.sh"],
)

sh_binary(
  name = "stop_postgres",
  srcs = ["stop_docker.sh"],
)

sh_binary(
  name = "delete_postgres",
  srcs = ["delete_docker.sh"],
)

sh_binary(
  name = "doSomething",
  srcs = ["doSomething.sh"],
)

genrule(
    name = "run_postgres_suite",
    outs = ["postgres_suite_output.txt"],
    cmd = "(./$(location :create_postgres) && ./$(location :doSomething) && ./$(location :stop_postgres) && ./$(location :delete_postgres)) > $@",
    tools = [":create_postgres", ":doSomething", ":stop_postgres", ":delete_postgres"],
)

py_binary(
  name = "check_environment",
  srcs = ["check_environment.py"],
  main = "check_environment.py",
)
